--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
     
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" sizes="32x32"/>
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
 
-    <title>React App</title>
+    <title>Russo abbigliamento</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
