--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-0/Ov+Xtz1u8YVskJJcJBuG2LzAkjKu8ZVnyCHGJdfLQbSDXm0E6TovmckTjT6djqTXsUzcx6U0plZEXVLjK+A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:wght@300&display=swap" rel="stylesheet">
 
 
     <title>Russo abbigliamento</title>
